Resolved comments and refactored the code